--- a/src/styles.css
+++ b/src/styles.css
@@ -19,10 +19,10 @@
 .rpc-notification .rpc-badge {
     background-color: red;
     position: absolute;
-    top: 0.25rem;
-    right: 0.25rem;
-    width: 0.3rem;
-    height: 0.3rem;
+    top: 0;
+    right: 0;
+    width: 6px;
+    aspect-ratio: 1;
     border-radius: 100%;
 }
 
