[fix]: ensure audio is enabled only when both audio setting and allowed flag are true

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,121 +1,121 @@
 .rpc-font {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 .rpc-main {
-    display: flex;
-    align-items: center;
-    column-gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
 }
 
 .rpc-dialog-container {
-    position: relative;
+  position: relative;
 }
 
 .rpc-notification {
-    position: relative;
+  position: relative;
 }
 
 .rpc-notification .rpc-badge {
-    background-color: red;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 6px;
-    aspect-ratio: 1;
-    border-radius: 100%;
+  background-color: red;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 6px;
+  aspect-ratio: 1;
+  border-radius: 100%;
 }
 
 .rpc-dialog {
-    position: absolute;
-    background-color: black;
-    color: white;
-    padding: 0.4rem 0 0.25rem 0;
-    border-radius: 0.4rem;
-    font-size: small;
+  position: absolute;
+  background-color: black;
+  color: white;
+  padding: 0.4rem 0 0.25rem 0;
+  border-radius: 0.4rem;
+  font-size: small;
 }
 
 .rpc-position-left {
-    left: 0.6rem;
-    translate: -100%;
+  left: 0.6rem;
+  translate: -100%;
 }
 
 .rpc-position-center {
-    left: 0.5rem;
-    translate: -50%;
+  left: 0.5rem;
+  translate: -50%;
 }
 
 .rpc-position-right {
-    left: 0.3rem;
+  left: 0.3rem;
 }
 
 .rpc-hr {
-    margin: 0.25rem 0;
-    border-color: rgba(255, 255, 255, 0.7);
+  margin: 0.25rem 0;
+  border-color: rgba(255, 255, 255, 0.7);
 }
 
 .rpc-message-container {
-    height: 7rem;
-    overflow-y: scroll;
-    padding-inline: 0.5rem;
-    margin-bottom: 0.25rem;
+  height: 7rem;
+  overflow-y: scroll;
+  padding-inline: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .rpc-message-container::-webkit-scrollbar {
-    width: 2.5px;
+  width: 2.5px;
 }
 
 .rpc-message-container::-webkit-scrollbar-track {
-    background: gray;
+  background: gray;
 }
 
 .rpc-message-container::-webkit-scrollbar-thumb {
-    background-color: white;
+  background-color: white;
 }
 
 .rpc-heading {
-    text-align: center;
-    font-size: medium;
-    font-weight: bold;
-    padding-inline: 0.5rem;
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+  padding-inline: 0.5rem;
 }
 
 .rpc-input-container {
-    display: flex;
-    width: 15rem;
-    max-width: 90vw;
-    column-gap: 0.25rem;
-    padding: 0.25rem 0.5rem;
+  display: flex;
+  width: 15rem;
+  max-width: 90vw;
+  column-gap: 0.25rem;
+  padding: 0.25rem 0.5rem;
 }
 
 .rpc-input {
-    color: white;
-    width: 100%;
-    background-color: black;
-    border: none;
-    outline: 1px solid rgba(255, 255, 255, 0.8);
-    border-radius: 0.25rem;
-    padding: 0.3rem 0.25rem;
+  color: white;
+  width: 100%;
+  background-color: black;
+  border: none;
+  outline: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 0.25rem;
+  padding: 0.3rem 0.25rem;
 }
 
 .rpc-input::placeholder {
-    color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .rpc-input:focus {
-    outline: 2px solid white;
+  outline: 2px solid white;
 }
 
 .rpc-button {
-    all: unset;
-    display: flex;
+  all: unset;
+  display: flex;
 }
 
 .rpc-icon-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .rpc-invert {
-    filter: invert(100%);
+  filter: invert(100%);
 }
